# softwareSPS30

./: .~lock.ESP32pinning.ods#  CMakeLists.txt  ESP32pinning.ods  partitions.csv  sdkconfigS2  sdkconfigS3
components/gui/: CMakeLists.txt  ClockDisplay.cpp  ClockDisplay.h  MainScreen.cpp  MainScreen.h  MeasDisplay.cpp  MeasDisplay.h  NavigArrows.cpp  NavigArrows.h  StatusLine.cpp  StatusLine.h  backGround.cpp  backGround.h  fonts.h  guiCommonTask.cpp  guiCommonTask.h  guiTask.cpp  guiTask.h  styles.cpp  styles.h
components/gui/fonts/: Awsome50.c  AwsomeSymbols40.c  DejaVuSansMono.sfd  Inconsolata-CondensedLight.sfd  awsome44.c  awsome50.c  awsome60.c  awsome75.c  cantarel25.c  cantarel30.c  cantarel35.c  cantarel50.c  cantarel60.c  cantarel75.c  cantarelLight25.c  cantarelLight40.c  cantarelLight50.c  cantarelLight60.c  cantarelLight75.c  cantarelLite20.c  cantarelRegular20.c  cantarelThin20.c  dejaVuSansMono100.c  dejaVuSansMono1004bppSub.c  dejaVuSansMono25.c  dejaVuSansMono50.c  dejaVuSansMono904bpp.c  dejaVuSansMono904bppSub.c  dejavusans44.c  dejavusans50.c  dejavusans75.c  dejavusansEL44.c  dejavusansEL75.c  insloata100_4bppSub.c  insloata50_4bppSub.c  insloata60_4bppSub.c  insolata25.c  insolata60.c  insolata70.c  insolata75.c  (+7 more)
components/http/: cgiScripts.cpp  (+2 more)
main/: CGIcommonScripts.cpp  CGItable.cpp  Log.cpp  gui.cpp  gui.old  idf_component.yml  lcd.cpp  log.cpp  main.cpp  sensorTask.cpp  settings.cpp
spiffs_image/: advancedSettings.html  index.html  info.html  sensorInfo.html  ventilatoren.html
spiffs_imageOrg/: index.html  settings.html
(+32 files in other folders)
